Page MenuHome GnuPG

WKD lookup fails due to overly specific Host: header
Closed, ResolvedPublic

Description

I just helped a friend debug his WKD trouble. Turns out that we generate http
requests with the following header for https://example.org/...

Host: example.org:443

rfc2616 says that if the port is omitted, the default port for that service is
assumed. So our request is ok, but overly specific. We surveyed three http
clients: wget, curl, and Firefox, and all of them strip the default port even if
it is explicitly given in the URL.

Meanwhile, we extended the server configuration to include the example.org:443
vhost, but if this caused problems once, it will do so again. We could align
our behavior with other popular http clients and omit the default port in the
request header.

Details

Version
master

Event Timeline

justus added a subscriber: justus.
werner raised the priority of this task from Low to Normal.Feb 17 2017, 9:48 PM
werner added projects: dirmngr, rc.
justus assigned this task to werner.